# sdepopdynamics

./: .gitignore  Cargo.toml  README.md  matplotlibrc  pyproject.toml  setup.py
.github/workflows/: greetings.yml  python-tests.yml
benches/: bench.rs
biopop_closure/: kolmogorov.py  matispop.py  moment_closures.py  multiple_births.py
popdynamics/: __init__.py  branching.py  sde.py
pytests/: conftest.py  test_kolmogorov.py  test_moment_closure_multiple_birth.py  test_moment_closures.py  test_pop_against_paper.py  test_specific_data.py
runs/: .gitignore
runs/dozens/: parameters.json
runs/european_badgers/: high_immigration.json  high_immigration_multiple_birth.json  low_immigration.json  low_immigration_multiple_birth.json  poph.json  popl.json
runs/european_badgers/equilibrium/: branching_high.parquet  branching_low.parquet
runs/european_badgers/time_develop/: branching_high.parquet  branching_low.parquet
runs/european_foxes/: high_immigration.json  high_immigration_multiple_birth.json  low_immigration.json  low_immigration_multiple_birth.json
runs/european_foxes/equilibrium/: branching_high.parquet  branching_low.parquet
runs/european_foxes/time_develop/: branching_high.parquet  branching_low.parquet
runs/lowpop/: parameters.json
runs/simple/: parameters.json
scripts/: autocorrelation.py  collect_results.py  combine_errors_tables.py  create_parameters.py  exchange.py  histogram.py  kstest.py  moment_closure.py  moments_per_time.py  norm_test.py  overtime.py  plot_histograms.py  plot_kolmogorov.py  sample_system_branching.sh  sample_system_sde.sh  sde_comp.py  skewness.py
src/: lib.rs  main.rs
