[package]
name = "popfeedback"
version = "0.1.0"
edition = "2021"

[lib]
name = "popfeedback"
path = "src/lib.rs"

#[[bin]]
#name = "popfeedback"
#path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
polars = { version = "0.46.0", features = ["parquet", "performant", "fmt_no_tty"], default-features=false }
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

