[package]
name = "popfeedback"
version = "0.1.0"
edition = "2021"

[lib]
name = "popfeedback"
path = "src/lib.rs"

#[[bin]]
#name = "popfeedback"
#path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.2"
polars = { version = "0.52", features = ["parquet"]}
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

