[build-system]
requires = ["setuptools>=61.0"]
build-backend= "setuptools.build_meta"

[project]
name = "biopop_closure"
version = "0.0.1"
authors = [
  { name="Eshed Magali", email="esheder@gmail.com" }
]
description = "A package for modelling logistical population models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "pandas",
    "pytest",
    "pyarrow"
]
license = {file = "LICENSE"}
keywords = ["SDE", "Logistic Model"]

[tool.setuptools]
packages = ["biopop_closure"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -k 'not slow'"
testpaths = [
    "pytests",
    "biopop_closure",
]
markers = [
    "slow",
]

